--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
-    "mongoose": "^4.6.8"
+    "mongoose": "^4.6.8",
+    "mongoose-type-email": "^1.0.2"
   }
 }
